--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "lodash": "4.17.10"
+    "lodash": "4.17.11",
+    "express": "4.16.0"
   },
   "author": "Your Name",
   "license": "ISC"
