--- a/.github/workflows/mock-deployment.yml
+++ b/.github/workflows/mock-deployment.yml
@@ -1,36 +1,29 @@
 name: Mock Deployment
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  mock-deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Create Deployment
-      id: create_deployment
-      uses: peter-evans/create-or-update-deployment@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        environment: production
-        description: 'Starting mock deployment'
-
-    - name: Simulate Deployment
       run: |
-        echo "Simulating deployment..."
-        sleep 10
+        echo "Creating a mock deployment..."
+        deployment_id=$(curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        -H "Accept: application/vnd.github.v3+json" \
+        https://api.github.com/repos/${{ github.repository }}/deployments \
+        -d '{"ref":"main","required_contexts":[],"environment":"production","description":"Mock deployment"}' | jq -r '.id')
+        echo "Deployment ID: $deployment_id"
+        echo "::set-output name=deployment_id::$deployment_id"
 
-    - name: Update Deployment Status
-      id: update_deployment_status
-      uses: peter-evans/create-or-update-deployment-status@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        environment: production
-        state: success
-        deployment_id: ${{ steps.create_deployment.outputs.deployment_id }}
-        description: 'Mock deployment completed successfully'
+    - name: Simulate Deployment Status Update
+      run: |
+        echo "Updating deployment status..."
+        curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        -H "Accept: application/vnd.github.v3+json" \
+        https://api.github.com/repos/${{ github.repository }}/deployments/${{ steps.create_deployment.outputs.deployment_id }}/statuses \
+        -d '{"state":"success","description":"Mock deployment completed successfully"}'
