--- a/.github/workflows/mock-deployment.yml
+++ b/.github/workflows/mock-deployment.yml
@@ -27,3 +27,16 @@ jobs:
         -H "Accept: application/vnd.github.v3+json" \
         https://api.github.com/repos/${{ github.repository }}/deployments/${{ steps.create_deployment.outputs.deployment_id }}/statuses \
         -d '{"state":"success","description":"Mock deployment completed successfully"}'
+        
+    - name: Update Deployment Status
+      run: |
+        deployment_id=$(curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        -H "Accept: application/vnd.github.v3+json" \
+        https://api.github.com/repos/${{ github.repository }}/deployments \
+        -d '{"ref":"main","required_contexts":[],"environment":"production","description":"Mock deployment"}' | jq -r '.id')
+        
+        echo "Updating deployment status..."
+        curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        -H "Accept: application/vnd.github.v3+json" \
+        https://api.github.com/repos/${{ github.repository }}/deployments/$deployment_id/statuses \
+        -d '{"state":"success","description":"Mock deployment completed successfully"}'
